--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "colyseus": "^0.16.5",
-    "@colyseus/uwebsockets-transport": "^0.16.9"
+    "@colyseus/uwebsockets-transport": "^0.16.10",
+    "colyseus": "^0.16.5"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=20 <=22",
+    "npm": ">=8"
   }
 }
-
